Bug 78497 - make 1-bit alpha images respect clip region. r=pavlov, sr=roc